--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,7 @@
 <h1>タスク一覧</h1>
 
+<%= link_to 'Sign up now!', '/users/new' %>
+
 <ul>
     <% @tasks.each do | task| %>
         <li><%= link_to task.id, task %> : <%= task.content %> : <%= task.status %></li>
