ユーザー機能追加

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
   
   <div>
     <ul>
-      <li><a href="#" class="nav-link">Microposts</a></li>
+      <li><a href="/" class="nav-link">Posts</a></li>
       <li><a href="#" class="nav-link">Followings</a></li>
       <li><a href="#" class="nav-link">Followers</a></li>
     </ul>
