--- a/app/views/layouts/_flash_tasks.html.erb
+++ b/app/views/layouts/_flash_tasks.html.erb
@@ -1,3 +1,6 @@
-<% flash.each do |task_type, task| %>
-	<div><%= task %></div>
-<% end %>
+<div align="center">
+  <% flash.each do |task_type, task| %>
+	  <div><%= task %></div>
+  <% end %>
+    
+</div>
