--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,11 +1,38 @@
-<h1>タスク一覧</h1>
+<!-- ナビバーの代わり -->
+<div align="right" style="margin-right:30px;padding:20px;">
+  <% if logged_in? %>
+    <%= link_to 'Logout', login_path %>
+  <% else %>
+    <%= link_to 'Sign up now!', signup_path %>&nbsp;&nbsp;
+    <%= link_to 'Login', login_path %>&nbsp;&nbsp;
+  <% end %>
+</div>
 
-<%= link_to 'Sign up now!', '/users/new' %>
+<div align="center">
+  <h1>タスク一覧</h1>
 
-<ul>
-    <% @tasks.each do | task| %>
+  <% if logged_in? %>
+  
+    <p>ログインユーザ: <%= current_user.name %></p>
+    
+    <div align="center">
+      <ul style="list-style: none;line-height: 30px;"><% @tasks.each do |task| %>
         <li><%= link_to task.id, task %> : <%= task.content %> : <%= task.status %></li>
-    <% end %>
-</ul>
+        <% end %>
+      </ul>
+      
+      <%= link_to '新規タスクの登録', new_task_path %>
+    </div>
 
-<%= link_to '新規タスクの登録', new_task_path %>
+  <% else %>
+    <%= link_to 'Sign up now!', signup_path %>
+  <% end %>
+</div>
+
+
+
+
+
+
+
+
