--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
-<div class="text-center">
+<div align="center">
   <h1>Sign up</h1>
 </div>
 
-<div>
-  <div>
-
+<div align="center">
+  <div style="line-height: 30pt;">
+    
     <%= form_with(model: @user, local: true) do |f| %>
     
     <%= render 'layouts/error_messages', model: f.object %>
@@ -29,7 +29,8 @@
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
 
-      <%= f.submit 'Sign up' %>
+      <%= f.submit 'Sign up' %><br>
+      <%= link_to 'Top', login_path %>
     <% end %>
   </div>
 </div>
