--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,12 @@
 <div>
   <aside>
     <h1><%= @user.name %></h1>
+    <h1><%= @user.session[:user_id] %></h1>
   </aside>
   
   <div>
     <ul>
-      <li><a href="/" class="nav-link">Posts</a></li>
+      <li><a href="/">Posts</a></li>
       <li><a href="#" class="nav-link">Followings</a></li>
       <li><a href="#" class="nav-link">Followers</a></li>
     </ul>
