--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,21 +1,24 @@
 <%= form_with(model: task, local: true) do |f| %>
-   
+ 
 	<% if task.errors.any? %>
-		<div id="error_explanation">
-	    	<ul>
-	    		<% task.errors.full_messages.each do |msg| %>
-	    		<li><%= msg %></li>
-	    		<% end %>
-	    	</ul>
+		<div id="error_explanation" class="alert alert-danger">
+	    <ul>
+	  		<% task.errors.full_messages.each do |msg| %>
+	  		<li style="list-style: none;"><%= msg %></li>
+	  		<% end %>
+	  	</ul>
 		</div>
 	<% end %>
 	
 	<p><%= f.label :content, 'タスク' %></p>
-    <p><%= f.text_field :content %></p>
-    <p><%= f.label :status, 'ステータス' %></p>
-    <p><%= f.text_field :status %></p>
-    
-    <%= f.submit '登録' %>
-	
+	<p><%= f.text_field :content %></p>
+	<p><%= f.label :status, 'ステータス' %></p>
+	<p><%= f.text_field :status %></p>
+	  
+	<%= f.submit '登録' %>
+
 <% end %>
+
+
+
 
