--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,9 @@
-<h1>タスク新規作成ページ</h1>
+<div align="center">
+    
+    <h1>タスク新規作成ページ</h1>
+    
+    <%= render 'form', task: @task %>
+    
+    <%= link_to '一覧に戻る', tasks_path %>
 
-<%= render 'form', task: @task %>
-
-<%= link_to '一覧に戻る', tasks_path %>
+</div>
