--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,7 @@
-<h1>id: <%= @task.id %> の編集ページ</h1>
-	
-<%= render 'form', task: @task %>
-	
-<%= link_to '一覧に戻る', tasks_path %>
+<div align="center">
+  <h1>id: <%= @task.id %> の編集ページ</h1>
+  	
+  <%= render 'form', task: @task %>
+  	
+  <%= link_to '一覧に戻る', tasks_path %>
+</div>
